--- a/css/resume.css
+++ b/css/resume.css
@@ -160,15 +160,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #3e9bed !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #3e9bed !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #3e9bed;
 }
 
 a:hover, a:focus, a:active {
